[gd_scene load_steps=4 format=3 uid="uid://cn78dc1leuy4t"]

[ext_resource type="Script" path="res://scenes/hud/boost_bar.gd" id="1_cojki"]
[ext_resource type="Texture2D" uid="uid://6phlvoj277ow" path="res://assets/UI/boost_bar.png" id="2_xgu5b"]
[ext_resource type="Texture2D" uid="uid://bq355tpx06c68" path="res://assets/UI/boost.png" id="3_e8bgj"]

[node name="boost_bar" type="Node2D"]
z_index = 1
scale = Vector2(1.5, 1.5)
script = ExtResource("1_cojki")

[node name="empty_bar" type="Sprite2D" parent="."]
texture = ExtResource("2_xgu5b")
region_enabled = true
region_rect = Rect2(0, 0, 64, 8)

[node name="red_bar" type="Sprite2D" parent="."]
position = Vector2(-32, -4)
texture = ExtResource("2_xgu5b")
centered = false
region_enabled = true
region_rect = Rect2(0, 24, 64, 8)

[node name="warning_bar" type="Sprite2D" parent="."]
position = Vector2(-32, -4)
texture = ExtResource("2_xgu5b")
centered = false
region_enabled = true
region_rect = Rect2(0, 16, 64, 8)

[node name="healthy_bar" type="Sprite2D" parent="."]
position = Vector2(-1, -3)
texture = ExtResource("2_xgu5b")
centered = false
offset = Vector2(-31, -1)
region_enabled = true
region_rect = Rect2(0, 8, 64, 8)
region_filter_clip_enabled = true

[node name="boost_text" type="Sprite2D" parent="."]
position = Vector2(-0.25, -0.499999)
scale = Vector2(0.953125, 0.75)
texture = ExtResource("3_e8bgj")
